fix colors on links to align with branding

--- a/_sass/layouts/_default.scss
+++ b/_sass/layouts/_default.scss
@@ -6,6 +6,13 @@ body {
   line-height: $base-line-height;
 }
 
+a {
+  color: $brand-color; 
+}
+
+a:hover {
+  color: $brand-color-secondary;
+}
 .container {
   margin-left: auto;
   margin-right: auto;
