--- a/_sass/mvxtheme.scss
+++ b/_sass/mvxtheme.scss
@@ -6,6 +6,7 @@ $on-tablet: 768px !default;
 $on-desktop: 992px !default;
 // colors
 $brand-color: #C7952A !default;
+$brand-color-secondary: #748A7C !default;
 $text-color: #4C555A !default;
 $gray-color: #E6E6E6 !default;
 $zebra-color: #ECEFF1 !default;
